--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>SimplexShotz - Home</title>
-    <script src="https://simplexshotz.github.io/styles/setup.js"></script>
+    <script src="https://simplexshotz.github.io/styles/setup.js?name=SimplexShotz&head=Home&links=Info:info,Home:home"></script>
   </head>
   <body>
     <h1>wow</h1>
