--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>SimplexShotz - Home</title>
     <script src="https://styles.simplexshotz.tk/setup.js?name=SimplexShotz&head=Home&links=Info:info,Home:home"></script>
   </head>
-  <body>
+  <body style="display: none;">
     <h1>wow</h1>
   </body>
 </html>
