--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="https://styles.simplexshotz.tk/setup.js?name=SimplexShotz&head=Home&links=Info:info,Home:home"></script>
   </head>
   <body style="display: none;">
-    <h1>wow</h1>
+    <h1><a href="https://edit.simplexshotz.tk">Editor</a></h1>
+    <h1><a href="https://simplexshotz.github.io/ReEdit">New Editor (Work in Progess)</a></h1>
   </body>
 </html>
